<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.k3.skaneAPI.view.BlankFragment"
    android:id="@+id/blank">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/fran" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerStations"
            android:entries = "@array/stations"
            android:prompt = "@string/spinner_title">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/till"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>
            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spinnerStations2"
                android:entries = "@array/stations"
                android:prompt = "@string/spinner_title"
                android:layout_marginLeft="14dp">

            </Spinner>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:padding="3dp"
            android:id="@+id/avg"
            android:text="@string/avg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:id="@+id/ank"
            android:text="@string/ank"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="1"
            android:id="@+id/restid"
            android:text="@string/restid"/>

    </LinearLayout>

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:divider="@android:color/holo_blue_dark"
            android:childDivider="@android:color/holo_blue_dark"
            android:id="@+id/expandableListView"
            android:childIndicator="@android:color/background_dark"
            android:focusableInTouchMode="false"
            android:headerDividersEnabled="false"
            android:listSelector="#383838"
            android:longClickable="false" />

    </LinearLayout>




</FrameLayout>
